--- a/HTML/forms.html
+++ b/HTML/forms.html
@@ -48,11 +48,38 @@
       <option>Minas Gerais</option>
     </select>
 
-    <input id="X1"type="radio" name="veiculo"><label for="X1">X1</label>
-    <input id="XC60"type="radio" name="veiculo"><label for="XC60">XC60</label>
-    <input id="Qc"type="radio" name="veiculo"><label for="Q5">Q5</label>
-    <input id="Discovery"type="radio" name="veiculo"><label for="Discovery">Discovery</label>
-    <input id="Taycan"type="radio" name="veiculo"><label for="Taycan">Taycan</label>
+    <fieldset>
+      <legend>Escolha um veículo</legend>
+
+      <input id="X1"type="radio" name="veiculo"><label for="X1">X1</label>
+      <input id="XC60"type="radio" name="veiculo"><label for="XC60">XC60</label>
+      <input id="Qc"type="radio" name="veiculo"><label for="Q5">Q5</label>
+      <input id="Discovery"type="radio" name="veiculo"><label for="Discovery">Discovery</label>
+      <input id="Taycan"type="radio" name="veiculo"><label for="Taycan">Taycan</label>
+    </fieldset>
+    
+    <br><br>
+
+    <fieldset>
+      <legend>De quais cores você gosta?</legend>
+      <input 
+        type="checkbox"
+        id ="vermelho"
+        name="cor">
+      <label for="vermelho">Vermelho</label>
+
+      <input 
+      type="checkbox"
+      id ="amarelo"
+      name="cor">
+      <label for="amarelo">Amarelo</label>
+
+      <input 
+      type="checkbox"
+      id ="preto"
+      name="cor">
+      <label for="preto">Preto</label>
+    </fieldset>
 
     <input type="submit" value="Enviar">
   </form>
